2011-09-03  kitone  <kitone@gna.org>

	* plugins/subtitleformats/subrip/subrip.cc:
	Fix bug #18381 : Fails to open srt file with co-ordinates in the first subtitle.

2011-09-03  kitone  <kitone@gna.org>

	* share/subtitleeditor.desktop.in:
	Fix bug #18449 : Encoding key is deprecated in share/subtitleeditor.desktop.in

2011-09-03  kitone  <kitone@gna.org>

	* share/subtitleeditor.desktop.in:
	Fix bug #18448 : Subtitleeditor should not handle MIME-Type "text/plain".

2011-07-02  kitone  <kitone@gna.org>

	* plugins/subtitleformats/sami/sami.cc:
	Fix: No need ptr for Subtitle.

2011-06-18  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2011-06-18  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.39.0 release.

2011-06-18  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/subtitleformats/Makefile.am:
	* plugins/subtitleformats/sami/Makefile.am:
	* plugins/subtitleformats/sami/sami.cc:
	* plugins/subtitleformats/sami/sami.se-plugin.in:
	Introduce new subtitle format SAMI. Patch by Dongsu Park <advance38 at gmail dot com>

2011-04-10  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/actions/Makefile.am:
	* plugins/actions/documentsnavigation/Makefile.am:
	* plugins/actions/documentsnavigation/documentsnavigation.cc:
	* plugins/actions/documentsnavigation/documentsnavigation.se-plugin.in:
	* src/document.cc:
	* src/documentsystem.cc:
	* src/documentsystem.h:
	Fix bug #18010 : Feature request: keyboard shortcut for switching between
	opened files. New plugin documentsnavigation.

2011-04-02  kitone  <kitone@gna.org>

	* plugins/subtitleformats/advancedsubstationalpha/Makefile.am:
	* plugins/subtitleformats/advancedsubstationalpha/advancedsubstationalpha.cc:
	* plugins/subtitleformats/advancedsubstationalpha/dialog-advancedsubstationalpha-preferences.ui:
	* plugins/subtitleformats/substationalpha/Makefile.am:
	* plugins/subtitleformats/substationalpha/dialog-substationalpha-preferences.ui: